@@ -34,6 +34,9 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.3/
    ignored tags (ticket #132).
  * The HTML sanitizer now strips any CSS comments in style attributes, which
    could previously be used to hide malicious property values.
+ * The HTML sanitizer now also removes any HTML comments encountered, as those
+   may be used to hide malicious payloads targetting a certain "innovative"
+   browser that goes and interprets the content of specially prepared comments.
  * Attribute access in template expressions no longer silently ignores
    exceptions other than `AttributeError` raised in the attribute accessor.
 
